--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "PAULO CEZAR LIMA ZAMPIERI",
+  "author": "PAULO CEZAR LIMA ZAMPIERI e Bruno Rocha",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -14,6 +14,8 @@
     "express": "^4.17.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.5",
+    "multer": "^1.4.1",
+    "sharp": "^0.22.1",
     "sqlite3": "^4.0.8"
   }
 }
