--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "PAULO CEZAR LIMA ZAMPIERI e Bruno Rocha",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.0",
+    "express-validator": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.5",
     "multer": "^1.4.1",
