--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-validator": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.5",
+    "moment": "^2.24.0",
     "multer": "^1.4.1",
     "sharp": "^0.22.1",
     "sqlite3": "^4.0.8"
